--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,12 @@
 
 [core]
     editor = vim
+
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+
+[remote "origin"]
+	fetch = +refs/pull/*/head:refs/remotes/origin/pr/*
